<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/perfil" />
        <item
            android:id="@+id/user_list"
            android:icon="@drawable/ic_baseline_move_to_inbox_24"
            android:title="@string/Mensajes" />
        <item
            android:id="@+id/maps_service"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/Solicitar_Servicio" />
        <item
            android:id="@+id/pays"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/my_pay" />
        <item
            android:id="@+id/acercadeuser"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/acerca_de" />
    </group>
</menu>