<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mecanico.Perfil_mechanic">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="236dp"
        android:layout_height="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_undraw_electric_car" />
    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Datos"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="130dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/name_mechanic"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apellido"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/lastname_mechanic"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Identificacion"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/iden_mechanic"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/correo_mechanic"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taller"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="150dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="390dp"
        android:text="@string/nameT" />

    <EditText
        android:id="@+id/txttaller"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nit"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/txtnit"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especial"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/txtespecial"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direc"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/txtdireccion"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="510dp"
        android:background="@drawable/textbox_redondos"
        android:ems="20" />

    <Button
        android:id="@+id/btnhabilitar_mechanic"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginTop="580dp"
        android:layout_marginLeft="60dp"
        android:text="@string/habil"
        android:textSize="11dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:background="@drawable/boton_redondo" />

    <Button
        android:id="@+id/btnactualizar_mechanic"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/actua"
        android:textColor="@color/white"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</FrameLayout>