<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="680dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_baseline_assignment_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:text="@string/form" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/vehiculo" />


    <EditText
        android:id="@+id/referencia"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/textbox_redondos"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="  Medio - Marca - adicional"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Celu" />


    <EditText
        android:id="@+id/cel"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/textbox_redondos"
        android:ems="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:hint="   Eje: 3105264564"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/Detail"
        />

    <EditText
        android:id="@+id/detalle"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/textbox_redondos"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="  Contenido"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_request"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:background="@drawable/boton_redondo"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/solicitar"
            android:textColor="@color/white" />
    </LinearLayout>




</LinearLayout>